--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -4,16 +4,22 @@ jobs:
   ruff:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Install ruff
-        run: |
-          pip install .[dev]
-      - name: Lint Python
-        run: |
-          ruff check --exclude=asreview/webapp
+    - uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install ruff
+      run: |
+        pip install .[dev]
+    - name: Lint Python
+      run: |
+        ruff check --exclude=asreview/webapp
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
   test-asreview-core:
     name: test-asreview-core
     strategy:
@@ -22,23 +28,29 @@ jobs:
         python: ["3.10", "3.13"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install packages
-        run: |
-          pip install pytest
-          pip install --no-cache-dir .[test]
-          pip install --no-cache-dir .
-      - name: Build project
-        run: |
-          python -m pip install build
-          python -m build
-      - name: Run test suite with pytest
-        run: |
-          pytest tests/
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+        fetch-depth: 0
+        fetch-tags: true
+    - uses: clonedSemicolon/setup-strace@v13
+    - uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python }}
+    - name: Install packages
+      run: |
+        pip install pytest
+        pip install --no-cache-dir .[test]
+        pip install --no-cache-dir .
+    - name: Build project
+      run: |
+        python -m pip install build
+        python -m build
+    - name: Run test suite with pytest
+      run: |
+        pytest tests/
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
