--- a/.github/workflows/ci-webapp.yml
+++ b/.github/workflows/ci-webapp.yml
@@ -4,57 +4,75 @@ jobs:
   prettier:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Prettify code
-        uses: creyD/prettier_action@v4.3
-        with:
-          prettier_options: --write **/*.{js,jsx,css,html}
-          only_changed: True
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - uses: clonedSemicolon/setup-strace@v13
+    - name: Prettify code
+      uses: creyD/prettier_action@v4.3
+      with:
+        prettier_options: --write **/*.{js,jsx,css,html}
+        only_changed: true
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
   ruff:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Install ruff
-        run: |
-          pip install .[dev]
-      - name: Lint Python
-        run: |
-          ruff check asreview/webapp
+    - uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install ruff
+      run: |
+        pip install .[dev]
+    - name: Lint Python
+      run: |
+        ruff check asreview/webapp
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
   compile-and-test:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 0
-          fetch-tags: true
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: "asreview/webapp/package-lock.json"
-      - name: Install setuptools
-        run: |
-          pip install setuptools
-      - name: Compile assets
-        run: |
-          python setup.py compile_assets
-      - name: Install pytest and package
-        run: |
-          pip install pytest pytest-random-order pytest-xdist
-          pip install --no-cache-dir .
-      - name: Test flask web app
-        run: |
-          pytest --random-order -n 6 asreview/webapp/tests
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+        fetch-depth: 0
+        fetch-tags: true
+    - uses: clonedSemicolon/setup-strace@v13
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - uses: actions/setup-node@v3
+      with:
+        node-version: "20"
+        cache: "npm"
+        cache-dependency-path: "asreview/webapp/package-lock.json"
+    - name: Install setuptools
+      run: |
+        pip install setuptools
+    - name: Compile assets
+      run: |
+        python setup.py compile_assets
+    - name: Install pytest and package
+      run: |
+        pip install pytest pytest-random-order pytest-xdist
+        pip install --no-cache-dir .
+    - name: Test flask web app
+      run: |
+        pytest --random-order -n 6 asreview/webapp/tests
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
