--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,8 +5,8 @@ on:
     types: [published]
   pull_request:
     paths:
-      - "Dockerfile"
-      - ".github/workflows/docker.yml"
+    - "Dockerfile"
+    - ".github/workflows/docker.yml"
 
 jobs:
   docker:
@@ -16,41 +16,47 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Checkout
+      uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Build the image for testing
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          load: true
-          tags: asreview/asreview:test
-      - name: Test the built image
-        run: |
-          docker run asreview/asreview:test -h
+    - name: Build the image for testing
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        load: true
+        tags: asreview/asreview:test
+    - name: Test the built image
+      run: |
+        docker run asreview/asreview:test -h
 
-      - name: Docker meta
-        id: meta
-        if: github.event_name != 'pull_request'
-        uses: docker/metadata-action@v4
-        with:
-          images: ghcr.io/asreview/asreview
-      - name: Login to GitHub registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and, if it is not a pull request, push to Docker Hub
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }},ghcr.io/asreview/asreview:latest
-          labels: ${{ steps.meta.outputs.labels }}
+    - name: Docker meta
+      id: meta
+      if: github.event_name != 'pull_request'
+      uses: docker/metadata-action@v4
+      with:
+        images: ghcr.io/asreview/asreview
+    - name: Login to GitHub registry
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and, if it is not a pull request, push to Docker Hub
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }},ghcr.io/asreview/asreview:latest
+        labels: ${{ steps.meta.outputs.labels }}
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
