--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -5,43 +5,55 @@ jobs:
     name: test-asreview-datatools
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Install packages
-        run: |
-          pip install pytest
-          pip install --no-cache-dir .
-      - name: Install extension
-        run: |
-          git clone https://github.com/asreview/asreview-datatools
-          cd asreview-datatools
-          latestTag=$(git describe --tags `git rev-list --tags --max-count=1`)
-          git checkout $latestTag
-          pip install .
-      - name: Run test on asreview-datatools
-        run: |
-          pytest asreview-datatools/tests/
+    - uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install packages
+      run: |
+        pip install pytest
+        pip install --no-cache-dir .
+    - name: Install extension
+      run: |
+        git clone https://github.com/asreview/asreview-datatools
+        cd asreview-datatools
+        latestTag=$(git describe --tags `git rev-list --tags --max-count=1`)
+        git checkout $latestTag
+        pip install .
+    - name: Run test on asreview-datatools
+      run: |
+        pytest asreview-datatools/tests/
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
   test-asreview-insights:
     name: test-asreview-insights
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Install packages
-        run: |
-          pip install pytest
-          pip install --no-cache-dir .
-      - name: Install extension
-        run: |
-          git clone https://github.com/asreview/asreview-insights
-          cd asreview-insights
-          latestTag=$(git describe --tags `git rev-list --tags --max-count=1`)
-          git checkout $latestTag
-          pip install .
-      - name: Run test on asreview-insights
-        run: |
-          pytest asreview-insights/tests/
+    - uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install packages
+      run: |
+        pip install pytest
+        pip install --no-cache-dir .
+    - name: Install extension
+      run: |
+        git clone https://github.com/asreview/asreview-insights
+        cd asreview-insights
+        latestTag=$(git describe --tags `git rev-list --tags --max-count=1`)
+        git checkout $latestTag
+        pip install .
+    - name: Run test on asreview-insights
+      run: |
+        pytest asreview-insights/tests/
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
